Fix bug of header links overflowing by adding wrap

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@ body
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    min-width: 100vw;
 }
 
 ul
@@ -13,6 +14,7 @@ ul
     list-style: none;
     display: flex;
     gap:30px;
+    flex-wrap: wrap;
 }
 
 a
@@ -54,6 +56,7 @@ a
     justify-content: space-around;
     align-items: center;
     flex-grow: 1;
+    overflow-wrap: break-word;
 }
 
 .introduction
